Deployment-Files/PylotService.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
spec:
  selector:             # indicates into which pods ClusterIP provides access
    app: sonarr
  ports:
    - port: 8989          # port exposed outside ClusterIP
      targetPort: 8989    # port exposed by Pod
  externalName: 192.168.1.10
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: internal
spec:
  selector:             # indica  tes into which pods ClusterIP provides access
    app: internal
  ports:
    - targetPort: 80
      port: 80
#---
# apiVersion: v1
# kind: Service
# metadata:
#   name: external #the external connection and port for npm
# spec:
#   type: NodePort
#   selector:
#     app: external
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80 # port exposed outside ClusterIP
#       targetPort: 80 # port exposed by Pod
#       nodePort: 30000
#     - name: admin
#       protocol: TCP
#       port: 81
#       targetPort: 81
#       nodePort: 30001
